fix login links

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -5737,6 +5737,10 @@ body {
 
 					a {
 						color: #fff;
+						font-size: 16px;
+						line-height: 24px;
+						letter-spacing: normal;
+						text-transform: none;
 
 						&:after {
 							background: #fff;
