--- a/css/style.css
+++ b/css/style.css
@@ -6916,6 +6916,10 @@ body {
 }
 .two-columns-wrapper .two-columns .column.blue h6 a {
   color: #fff;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0;
+  text-transform: none;
 }
 .two-columns-wrapper .two-columns .column.blue h6 a:after {
   background: #fff;
